Modified project file.
Added post build command to copy resources to build directory.

--- a/GLtron.vcxproj
+++ b/GLtron.vcxproj
@@ -271,6 +271,9 @@
       <AdditionalDependencies>nebu.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libcmtd</IgnoreSpecificDefaultLibraries>
     </Link>
+    <PostBuildEvent>
+      <Command>XCOPY "$(SolutionDir)Resources\" "$(TargetDir)\" /S /Y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
