--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,5 @@ configure_file(defines.h.in defines.h @ONLY)
 
 # target_sources(${target} PRIVATE main.c)
 target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+set(DEFINES_H_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
+# set(DEFINES_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR} CAHE INTERNAL "defines.h include directory")
